Try to fix weird input element appearance on iOS Safari

--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ a:hover {
 }
 
 input {
+    -webkit-appearance: none;
     font-family: var(--main-font);
     border-radius: 5px;
 }
